--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -22,25 +22,14 @@
           <%= form_for report, :html => { :class => "run-report", :method => :get } do |f| %>
             <fieldset class="report-form">
               <h2 class="report-header"><%= report.name %></h2>
-              <div class="report-details">
-                <div class="subtitle">
-                <%= report.subtitle %>
-                </div>
-                <%= 
-                  content_tag(
-                    :div, 
-                    "Grouping: #{group_by_label(report.group_fields)}",
-                    :class => "grouping-description"
-                  ) if report.group_fields.present? 
-                %>
-                <%= 
-                  content_tag(
-                    :div, 
-                    "Description: #{report.description}",
-                    :class => "report-description"
-                  ) if report.description.present? 
-                %>
-              </div>
+              <div class="subtitle"><%= report.subtitle %></div>
+              <%= 
+                content_tag(
+                  :div, 
+                  "Grouping: #{group_by_label(report.group_fields)}",
+                  :class => "grouping-description"
+                ) if report.group_fields.present? 
+              %>
               <%= render "run_form", :f => f, :report => report, :ol_class => "index" %>
             </fieldset>
           <% end %>
