Flex reports: bugfix for flex report
where user enters parameters that result in no allocations being
selected.

--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -36,4 +36,8 @@
   </fieldset>
 <% end %>
 
-<%= render "report", :results => @report.results, :group_fields => @report.group_fields %>
+<% if @report.results.present? %>
+  <%= render "report", :results => @report.results, :group_fields => @report.group_fields %>
+<% else %>
+  <h2>No data to report.</h2>
+<% end %>
