--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,5 +8,5 @@
   <li><%= link_to "Summaries", summaries_path %></li>
   <li><%= link_to "Trips", trips_path %></li>
   <li><%= link_to "Runs", runs_path %></li>
-  <li><%= link_to "Users", users_index_path %></li>
+  <li><%= link_to "Users", users_path %></li>
 </ul>
