--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -1,15 +1,20 @@
 <div id="page-header">
-  <h1>Change Password</h1>
+  <h1>Change Password for <%= current_user.email %></h1>
 </div>
-
-<%= form_for @user, :url=>{:action=>:change_password} do |f| %>
-
-<%= f.label :password %>
-<%= f.password_field :password %><br/>
-
-<%= f.label :password_confirmation %>
-<%= f.password_field :password_confirmation %><br/>
-
-<%= f.submit "Update" %>
-
+<%= form_tag change_password_path, method: "put" do |f| %>
+  <fieldset>
+    <ol class="section fourth">
+      <li>
+        <%= label_tag :password %>
+        <%= password_field_tag :password %>
+      </li>
+      <li>
+        <%= label_tag :password_confirmation %>
+        <%= password_field_tag :password_confirmation %>
+      </li>
+    </ol>
+    <div class="actions">
+      <%= submit_tag "Update" %>
+    </div>
+  </fieldset>
 <% end %>
