--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= favicon_link_tag "favicon.ico" %>
   <%= stylesheet_link_tag "application", media: "screen, projection" %>
   <%= stylesheet_link_tag "application-print", media: "print" %>
+  <%= javascript_include_tag "application" %>
 </head>
 <body class="<%= bodytag_class %>">
   <div id="header">
