--- a/app/views/summaries/edit.html.erb
+++ b/app/views/summaries/edit.html.erb
@@ -17,8 +17,8 @@
             <%= link_to version.valid_start.localtime.to_s(:full), edit_summary_path(version.id) %>
           <% end %>
           by <span class="update-user"><%= version.updater.email %></span> 
-          <%= link_to "", delete_version_summary_path(version), :class => "delete", method: :delete, confirm: "Are you sure you want to delete this version?" if !version.latest? && current_user.is_admin %>
-          <%= link_to "", delete_summary_path(version), :class => "delete", method: :delete, confirm: "Are you sure you want to delete this summary?" if @versions.size == 1 && current_user.is_admin %>
+          <%= link_to "", delete_version_summary_path(version), :class => "delete", method: :delete, data: { confirm: "Are you sure you want to delete this version?" } if !version.latest? && current_user.is_admin %>
+          <%= link_to "", delete_summary_path(version), :class => "delete", method: :delete, data: { confirm: "Are you sure you want to delete this summary?" } if @versions.size == 1 && current_user.is_admin %>
         </li>
       <% end %>
     </ul>
