--- a/app/assets/stylesheets/screen.css.erb
+++ b/app/assets/stylesheets/screen.css.erb
@@ -938,6 +938,7 @@ a.details,
 a.delete,
 a.mark-complete,
 a.add,
+a.add-report,
 a.move,
 a.import,
 a.history,
@@ -981,6 +982,9 @@ a.import {
 a.add {
     background: url(<%= asset_path 'plus-button.png' %>) left center no-repeat scroll;
 }
+a.add-report {
+    background: url(<%= asset_path 'report--plus.png' %>) left center no-repeat scroll;
+}
 a.change-password {
     background: url(<%= asset_path 'lock.png' %>) left center no-repeat scroll;
 }
@@ -1005,6 +1009,8 @@ a.edit:hover,
 a.edit:active,
 a.delete:hover,
 a.delete:active,
+a.add-report:hover,
+a.add-report:active,
 a.add:hover,
 a.add:active {
     text-decoration: underline;
