--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -29,7 +29,7 @@
         <td><%= allocation.program.try(:name) %></td>
         <td><%= allocation.project.try(:number_and_name) %></td>
         <td><%= allocation.county %></td>
-        <td><%= link_to "Delete", allocation_url(allocation), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this allocation?" if current_user.is_admin && !(allocation.trips.exists? || allocation.summaries.exists?) %></td>
+        <td><%= link_to "Delete", allocation_url(allocation), :class => "delete", :method => "delete", data: { confirm: "Are you sure you want to delete this allocation?" } if current_user.is_admin && !(allocation.trips.exists? || allocation.summaries.exists?) %></td>
       </tr>
     <% end %>
   <% end %>
