--- a/app/views/flex_reports/edit.html.erb
+++ b/app/views/flex_reports/edit.html.erb
@@ -15,6 +15,6 @@
 <% if current_user.is_admin %>
   <%= form_for @report, :html => { :method => 'delete' } do |f| %>
     <input type="hidden" name="report[id]" value="<%= @report.id %>" />
-    <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
+    <%= f.submit "Delete Report", data: { confirm: "Are you sure you want to delete this report?" }, :class=>'delete-report' %>
   <% end %>
 <% end %>
