--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -14,7 +14,7 @@
   <% @programs.each do |program| %>
     <tr>
       <td><%= link_to program.name, edit_program_path(program) %></td>
-      <td><%= link_to "Delete", program_url(program), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this program?" if current_user.is_admin && program.allocations.empty? %></td>
+      <td><%= link_to "Delete", program_url(program), :class => "delete", :method => "delete", data: { confirm: "Are you sure you want to delete this program?" } if current_user.is_admin && program.allocations.empty? %></td>
     </tr>
   <% end %>
 </table>
