--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= link_to project.name, edit_project_path(project) %></td>
     <td><%= project.funding_source.try :name %></td>
     <td><%= project.project_number %></td>
-    <td><%= link_to "Delete", project_url(project), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this project?" if current_user.is_admin && project.allocations.empty? %></td>
+    <td><%= link_to "Delete", project_url(project), :class => "delete", :method => "delete", data: { confirm: "Are you sure you want to delete this project?" } if current_user.is_admin && project.allocations.empty? %></td>
   </tr>
 <% end %>
 </table>
