--- a/app/views/trimet_providers/index.html.erb
+++ b/app/views/trimet_providers/index.html.erb
@@ -16,7 +16,7 @@
     <tr>
       <td><%= link_to trimet_provider.name, edit_trimet_provider_path(trimet_provider) %></td>
       <td><%= trimet_provider.trimet_identifier %></td>
-      <td><%= link_to "Delete", trimet_provider_url(trimet_provider), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this provider?" if current_user.is_admin && trimet_provider.allocations.empty? %></td>
+      <td><%= link_to "Delete", trimet_provider_url(trimet_provider), :class => "delete", :method => "delete", data: { confirm: "Are you sure you want to delete this provider?" } if current_user.is_admin && trimet_provider.allocations.empty? %></td>
     </tr>
   <% end %>
 </table>
