--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div id="login-area">
         <a href="https://apps.rideconnection.org/greenbook/index.php/Category:Service_Database">Help</a>
         <% if current_user %>
-          | <%= link_to current_user.email, change_password_path %></a> | <%= link_to "Log out", logout_path, {method: "post"} %>
+          | <%= link_to current_user.email, change_password_path %></a> | <%= link_to "Log out", destroy_user_session_path %>
         <% end %>
       </div>
     </div><!-- /.wrap -->
