Display ruby and rails versions on admin page

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -16,3 +16,8 @@
     <li><%= link_to "Users", :controller => "users" %></li>
   <% end %>
 </ul>
+<h2>Version Information</h2>
+<ul>
+  <li>Ruby: <%= RUBY_VERSION %> p<%= RUBY_PATCHLEVEL %></li>
+  <li>Rails: <%= Rails.version %></li>
+</ul>
