Flex Report: Replace "[group value] Not Specified"
with "Unspecified" to save space when printing report

--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -5,7 +5,7 @@
   <% end %>
   
   <td class="inner-most-field">
-    <%= label.present? ? label : "#{FlexReport::GroupMappings[@report.group_fields.last]} Not Specified" %>
+    <%= label.present? ? label : "Unspecified" %>
   </td>
   <% if @report.fields.include? 'funds' %>
     <td class="number">
