--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -20,7 +20,7 @@
       <% if short_name.present? %>
         <%= short_name %>
       <% else %>
-        <%= FlexReport::GroupMappings[report_group_fields[report_group_fields.size - group_fields.size]] %> Not Specified
+        Unspecified
       <% end %>
       Total
     <% end %>
