--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -17,7 +17,7 @@
       <% if group_name(row,group_fields).present? %> 
         <%= group_name(row,group_fields) %>
       <% else %>
-        <%= FlexReport::GroupMappings[report_group_fields[report_group_fields.size - group_fields.size]] %> Not Specified
+        Unspecified
       <% end %>
     <% end %>
     <td class="report-item no-print">
