Flex report filters: highlight selected filters

--- a/app/assets/stylesheets/screen.css.erb
+++ b/app/assets/stylesheets/screen.css.erb
@@ -1251,7 +1251,8 @@ body.flex-reports #filters ul.filter-list li.blank {
   color: #AAAAAA;
 }
 body.flex-reports #filters ul.filter-list li.not-blank {
-  font-weight: bold; 
+  font-weight: bold;
+  background-color: #FFFF99;
 }
 body.flex-reports div.actions input[type=submit] {
   width: 200px;
