--- a/app/views/flex_reports/_header.html.erb
+++ b/app/views/flex_reports/_header.html.erb
@@ -9,7 +9,7 @@
     <% if column_count > 0 %>
       <th class="column-group" colspan="<%= column_count %>">Funding</th>
     <% end %>
-    <% column_count = (rf & %w{in_district_trips out_of_district_trips customer_trips guest_and_attendant_trips total_trips}).count %>
+    <% column_count = (rf & %w{in_district_trips out_of_district_trips customer_trips guest_and_attendant_trips total_trips turn_downs no_shows cancellations unmet_need other_results total_requests}).count %>
     <% if column_count > 0 %>
       <th class="column-group" colspan="<%= column_count %>">Trips</th>
     <% end %>
@@ -21,10 +21,6 @@
     <% column_count = (rf & %w{cost_per_trip cost_per_customer cost_per_mile cost_per_hour miles_per_ride miles_per_customer}).count %>
     <% if column_count > 0 %>
       <th class="column-group" colspan="<%= column_count %>">Metrics</th>
-    <% end %>
-    <% column_count = (rf & %w{turn_downs no_shows cancellations unmet_need other_results total_requests}).count %>
-    <% if column_count > 0 %>
-      <th class="column-group" colspan="<%= column_count %>">Results</th>
     <% end %>
     <% if rf.include? 'undup_riders' %><th rowspan="2" class="wrap number">Undup Riders</th><% end %>
     <% column_count = (rf & %w{escort_volunteer_hours admin_volunteer_hours total_volunteer_hours}).count %>
@@ -50,7 +46,13 @@
     <% if rf.include? 'out_of_district_trips' %><th class="wrap number">Out of District</th><% end %>
     <% if rf.include? 'customer_trips' %><th class="wrap number">Customers</th><% end %>
     <% if rf.include? 'guest_and_attendant_trips' %><th class="wrap number">Guests and Attendants</th><% end %>
-    <% if rf.include? 'total_trips' %><th class="wrap number">Total</th><% end %>
+    <% if rf.include? 'total_trips' %><th class="wrap number">Total Trips Completed</th><% end %>
+    <% if rf.include? 'turn_downs' %><th class="wrap number">Turn Downs</th><% end %>
+    <% if rf.include? 'no_shows' %><th class="wrap number">No Shows</th><% end %>
+    <% if rf.include? 'cancellations' %><th class="wrap number">Cancel&shy;lations</th><% end %>
+    <% if rf.include? 'unmet_need' %><th class="wrap number">Unmet Need</th><% end %>
+    <% if rf.include? 'other_results' %><th class="wrap number">Other</th><% end %>
+    <% if rf.include? 'total_requests' %><th class="wrap number">Total Trips Requested</th><% end %>
     <% if rf.include? 'driver_volunteer_hours' %><th class="wrap number">Volunteer</th><% end %>
     <% if rf.include? 'driver_paid_hours' %><th class="wrap number">Paid</th><% end %>
     <% if rf.include? 'driver_total_hours' %><th class="wrap number">Total</th><% end %>
@@ -60,12 +62,6 @@
     <% if rf.include? 'cost_per_hour' %><th class="wrap number">Cost/Hour</th><% end %>
     <% if rf.include? 'miles_per_ride' %><th class="wrap number">Miles/Trip</th><% end %>
     <% if rf.include? 'miles_per_customer' %><th class="wrap number">Miles/Cust</th><% end %>
-    <% if rf.include? 'turn_downs' %><th class="wrap number">Turn Downs</th><% end %>
-    <% if rf.include? 'no_shows' %><th class="wrap number">No Shows</th><% end %>
-    <% if rf.include? 'cancellations' %><th class="wrap number">Cancel&shy;lations</th><% end %>
-    <% if rf.include? 'unmet_need' %><th class="wrap number">Unmet Need</th><% end %>
-    <% if rf.include? 'other_results' %><th class="wrap number">Other</th><% end %>
-    <% if rf.include? 'total_requests' %><th class="wrap number">Total Requests</th><% end %>
     <% if rf.include? 'escort_volunteer_hours' %><th class="wrap number">Escort</th><% end %>
     <% if rf.include? 'admin_volunteer_hours' %><th class="wrap number">Admin</th><% end %>
     <% if rf.include? 'total_volunteer_hours' %><th class="wrap number">Total</th><% end %>
