Flex report: label adjustment

--- a/app/views/flex_reports/_header.html.erb
+++ b/app/views/flex_reports/_header.html.erb
@@ -46,7 +46,7 @@
     <% if rf.include? 'out_of_district_trips' %><th class="wrap number">Out of District</th><% end %>
     <% if rf.include? 'customer_trips' %><th class="wrap number">Customers</th><% end %>
     <% if rf.include? 'guest_and_attendant_trips' %><th class="wrap number">Guests and Attendants</th><% end %>
-    <% if rf.include? 'total_trips' %><th class="wrap number">Total Trips Completed</th><% end %>
+    <% if rf.include? 'total_trips' %><th class="wrap number">Completed</th><% end %>
     <% if rf.include? 'turn_downs' %><th class="wrap number">Turn Downs</th><% end %>
     <% if rf.include? 'no_shows' %><th class="wrap number">No Shows</th><% end %>
     <% if rf.include? 'cancellations' %><th class="wrap number">Cancel&shy;lations</th><% end %>
