Tweaks to medicaid report

--- a/app/views/predefined_reports/medicaid_nonmedical.html.erb
+++ b/app/views/predefined_reports/medicaid_nonmedical.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <h2><%= describe_date_range(@query.start_date, @query.end_date) %></h2>
-  <h3><%= office %> Office</h3>
+  <h3><%= office %></h3>
 
   <table id="active-rider-results" class="results break-after">
     <thead>
