--- a/app/views/predefined_reports/medicaid_nonmedical.html.erb
+++ b/app/views/predefined_reports/medicaid_nonmedical.html.erb
@@ -20,7 +20,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @customer_rows[office].values.sort_by {|a| a[:customer].name }.each do |customer_row| %>
+      <% @customer_rows[office].values.sort_by {|a| a[:customer].name.downcase }.each do |customer_row| %>
         <% customer = customer_row[:customer] %>
         <tr>
           <td><%= customer_row[:case_manager] %></td>
