--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -6,55 +6,59 @@
       </li>
       <div id="date_fields" <%= @query.all_dates ? "style='display:none'" : nil %>>
         <li>
-          <%= f.label :start_date, "Start Date:" %> 
+          <%= f.label :start_date, "Start date:" %>
           <%= f.text_field :start_date, :class=>"datepicker" %>
         </li>
         <li>
-          <%= f.label :end_date, "End Date:" %> 
+          <%= f.label :end_date, "End date:" %>
           <%= f.text_field :end_date, :class=>"datepicker" %>
         </li>
       </div>
       <li>
-        <%= f.label :customer_first_name, "Customer first name contains:" %> 
+        <%= f.label :customer_first_name, "Customer first name contains:" %>
         <%= f.text_field :customer_first_name %>
       </li>
       <li>
-        <%= f.label :customer_last_name, "Customer last name contains:" %> 
+        <%= f.label :customer_last_name, "Customer last name contains:" %>
         <%= f.text_field :customer_last_name %>
       </li>
     </ol>
 
     <ol class="section fourth">
       <li>
-        <%= f.label :reporting_agency_id, "Reporting Agency:" %> 
-        <%= f.collection_select :reporting_agency_id, @reporting_agencies, :id, :to_s, :include_blank => true %>
+        <%= f.label :reporting_agency_id, "Reporting agency:" %>
+        <%= f.collection_select :reporting_agency_id, @reporting_agencies, :id, :to_s, include_blank: true %>
       </li>
       <li>
-        <%= f.label :provider_id, "Provider:" %> 
-        <%= f.collection_select :provider_id, @providers, :id, :to_s, :include_blank => true %>
+        <%= f.label :provider_id, "Provider:" %>
+        <%= f.collection_select :provider_id, @providers, :id, :to_s, include_blank: true %>
       </li>
       <li>
-        <%= f.label :program_id, "Program:" %> 
-        <%= f.collection_select :program_id, @programs, :id, :name, :include_blank => true %>
+        <%= f.label :program_id, "Program:" %>
+        <%= f.collection_select :program_id, @programs, :id, :name, include_blank: true %>
       </li>
       <li>
-        <%= f.label :allocation_id, "Allocation:" %> 
+        <%= f.label :allocation_id, "Allocation:" %>
         <% if @query.allocation_ids.present? %>
-          <%= f.collection_select :allocation_id, @allocations, 
+          <%= f.collection_select :allocation_id, @allocations,
               :id, :name, :include_blank => true %>
         <% else %>
-          <%= f.grouped_collection_select :allocation_id, Provider.with_trip_data.default_order.includes(:allocations), 
-              :allocations_with_trip_data, :name, :id, :select_label, :include_blank => true %>
+          <%= f.grouped_collection_select :allocation_id, Provider.with_trip_data.default_order.includes(:allocations),
+              :allocations_with_trip_data, :name, :id, :select_label, include_blank: true %>
         <% end %>
       </li>
       <li>
-        <%= f.label :result_code, "Result Code:" %> 
-        <%= f.select :result_code, @result_codes, :include_blank => true %>
+        <%= f.label :result_code, "Result code:" %>
+        <%= f.select :result_code, @result_codes, include_blank: true %>
       </li>
       <li>
-        <%= f.label :original_override, "Original Override Contains:" %> 
+        <%= f.label :original_override, "Original override contains:" %>
         <%= f.text_field :original_override %>
         <%= f.hidden_field :allocation_id_list %>
+      </li>
+      <li>
+        <%= f.label :data_entry_complete, "Data entry marked complete:" %>
+        <%= f.select :data_entry_complete, ['Yes','No'], include_blank: true %>
       </li>
     </ol>
     <% if @query.allocation_ids.present? %>
@@ -62,7 +66,7 @@
         <h2>This search is limited to the following allocations:</h2>
         <% @allocations.each do |allocation| %>
           <li>
-            <%= link_to allocation.name, edit_allocation_url(allocation) %> 
+            <%= link_to allocation.name, edit_allocation_url(allocation) %>
           </li>
         <% end %>
       </ul>
